--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "session-file-store": "^1.5.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.0",
