--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
